# digital-library

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
DigitalLibraryWpf/: .gitignore  App.xaml  App.xaml.cs  DigitalLibraryWpf.csproj  DigitalLibraryWpf.sln  MainWindow.xaml  MainWindow.xaml.cs
DigitalLibraryWpf/Converters/: BooleanToCommandMultiConverter.cs
DigitalLibraryWpf/Models/: Book.cs
DigitalLibraryWpf/Services/: ApiService.cs  CredentialsManager.cs
DigitalLibraryWpf/ViewModels/: BaseViewModel.cs  BookManagementViewModel.cs  LoginViewModel.cs  MainViewModel.cs  RelayCommand.cs
DigitalLibraryWpf/Views/: BookManagementView.xaml  BookManagementView.xaml.cs  LoginView.xaml  LoginView.xaml.cs
digital_library/: __main__.py  gui.py  json_api.py  sip2_mock_server.py  web_gui.html
digital_library_api/: database.py  json_api.py  models.py  test_dependencies.py  test_json_api.py
digital_library_gui/: __main__.py  book_operations.py  dialogs.py  gui.py  ui_setup.py
digital_library_rfid/: rfid.py
digital_library_sip2/: sip2_demo_client.py
digital_library_web/: main.py
digital_library_web/islands/: AddBookForm.tsx  AuthStatus.tsx  BookList.tsx  Home.tsx  LoginForm.tsx  RegisterForm.tsx
digital_library_web/routes/: _app.tsx  index.tsx
digital_library_web/signals/: auth.ts  auth.tsx
src/digital_library/: __init__.py
