[project]
name = "digital-library"
version = "2025.6.14.0"
description = "demo digital library application"
readme = "README.md"
authors = [{ name = "Maple", email = "wjxa20152015@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.5",
    "pyserial>=3.5",
    "pyside6>=6.9.1",
    "pytest>=8.4.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sodatools>=2025.2.16.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
digital-library-server = "digital_library_api.json_api:main"
digital-library-web = "digital_library_web.main:main"

[project.gui-scripts]
digital-library-gui = "digital_library_gui.gui:main_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = [
    "digital_library_api",
    "digital_library_rfid",
    "digital_library_sip2",
    "digital_library_gui",
    "digital_library_web",
]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
    "*.sqlite3",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true

packages = [
    "digital_library_api",
    "digital_library_rfid",
    "digital_library_sip2",
    "digital_library_gui",
    "digital_library_web",
]

[tool.ruff.lint]
ignore = ['F401', "E701", "E702"]
